# EphemeralGuard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
benches/: db_benchmark.rs
ephemeral_guard/: Cargo.toml  config.toml
ephemeral_guard/benches/: db_benchmark.rs
ephemeral_guard/examples/: encryption_example.rs  hash_example.rs  model_example.rs  principal_store_example.rs
ephemeral_guard/src/: config.rs  main.rs
ephemeral_guard/src/crypto/: hash.rs  mod.rs
ephemeral_guard/src/db/: core.rs  mod.rs
ephemeral_guard/src/db/models/: credential.rs  secret_data.rs
ephemeral_guard/src/db/storage/: principal_store.rs
ephemeral_guard/src/server/: factory.rs  mod.rs  tcp_server.rs  traits.rs  zmq_server.rs
ephemeral_guard/src/utils/: logger.rs
ephemeral_guard/tests/: credential_test.rs  database_core_test.rs  encryption_test.rs  hash_test.rs  principal_store_test.rs  secret_data_test.rs
ephemeral_guard_client/: Cargo.toml  README.md
ephemeral_guard_client/src/: main.rs
ephemeral_guard_debug_client/: Cargo.toml
ephemeral_guard_debug_client/src/: main.rs
examples/: encryption_example.rs  hash_example.rs  model_example.rs  operation_example.rs  principal_store_example.rs
secret_db/: Cargo.toml
secret_db/benches/: db_benchmark.rs
secret_db/examples/: encryption_example.rs  hash_example.rs  model_example.rs  principal_store_example.rs
secret_db_client/: Cargo.toml  README.md
secret_db_client/src/: main.rs
secret_db_debug_client/: Cargo.toml
secret_db_debug_client/src/: main.rs
src/: lib.rs  main.rs
(+22 files in other folders)
