[package]
name = "ephemeral_guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = { version = "0.8.12", features = ["xxh32"] }
libaes = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8.5"
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
sysinfo = "0.23.0"

[[bench]]
name = "db_benchmark"
harness = false